--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "jsdom": "^7.2.2",
     "json-loader": "^0.5.4",
     "less": "^2.5.3",
@@ -38,6 +39,7 @@
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
@@ -49,12 +51,15 @@
     "http-proxy": "^1.12.0",
     "immutable": "^3.7.6",
     "lodash": "^4.0.0",
+    "material-ui": "^0.14.2",
     "morgan": "^1.6.1",
     "react": "^0.14.6",
     "react-addons-pure-render-mixin": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
+    "react-tap-event-plugin": "^0.2.1",
+    "react-widgets": "^3.1.6",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
     "superagent": "^1.7.0"
