--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front end user management example",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
+    "test": "mocha --compilers js:babel-core/register --require mock-local-storage ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "start": "node server",
     "build": "NODE_ENV=production webpack --config ./webpack.production.config.js -p --progress --profile --colors",
     "dev": "rm -rf ./dist/bundle.js && rm -rf ./dist/bundle.js.map && npm start"
@@ -37,6 +37,7 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "mocha": "^2.3.4",
+    "mock-local-storage": "^1.0.2",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
